Recruites page added

--- a/src/shared-component/CRM-Grid.jsx/style.scss
+++ b/src/shared-component/CRM-Grid.jsx/style.scss
@@ -6,3 +6,7 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+
+// .css-11xur9t-MuiPaper-root-MuiTableContainer-root {
+//      background-color: red !important;
+// }
