all changes done

--- a/src/components/Recruits/style.scss
+++ b/src/components/Recruits/style.scss
@@ -9,6 +9,7 @@
 
       .css-y8ay40-MuiTableCell-root {
          background-color: white !important;
+         border:0px !important;
       }
 
       .css-1ex1afd-MuiTableCell-root {
