--- a/src/components/Agents/style.scss
+++ b/src/components/Agents/style.scss
@@ -31,3 +31,41 @@
        border:2px solid red !important;
    }
 }
+
+.policiesDataGrid {
+   .css-11xur9t-MuiPaper-root-MuiTableContainer-root {
+      border-radius: 0px !important;
+      width: 97% !important;
+      height:29vh;
+      scroll-behavior: none;
+
+      .css-15wwp11-MuiTableHead-root {
+         height: 0px !important;
+      }
+
+      .css-y8ay40-MuiTableCell-root {
+         background-color: white !important;
+         border:0px !important;
+      }
+
+      .css-1ex1afd-MuiTableCell-root {
+         background-color: #D9D9D9;
+         border-bottom: 28px solid white !important;
+         //   .profilePicCell{
+         //    background-color: white !important;
+         //   }
+      }
+
+      .profilePicCell {
+         background-color: white !important;
+      }
+   }
+
+   .css-apqrd9-MuiTableBody-root {
+       border:2px solid red !important;
+   }
+}
+
+.agentDetail-text{
+   color:white;
+}
