Policy code updated

--- a/src/components/Policies/style.scss
+++ b/src/components/Policies/style.scss
@@ -43,3 +43,11 @@
     }
 }
 
+.policyDetails{
+    .css-ahj2mt-MuiTypography-root{
+        color:black;
+        text-align: center;
+        margin-top: 10px;
+    }
+}
+
