--- a/src/shared-component/CRM-Dropdown/style.scss
+++ b/src/shared-component/CRM-Dropdown/style.scss
@@ -16,12 +16,20 @@
 #dropdown-menu-previous-months{
     top:55px;
     left:1120px;
+    .menu-item{
+        margin: 2px;
+        border: 2px solid #EDEDED;
+    }
 }
 
 
 #dropdown-menu-previous-year{
     top:210px;
     left:1120px;
+    .menu-item{
+        margin: 2px;
+        border: 2px solid #EDEDED;
+    }
 }
 
 .menu-item-text-{
