admin dashboard updated

--- a/src/shared-component/CRM-Dropdown/style.scss
+++ b/src/shared-component/CRM-Dropdown/style.scss
@@ -12,6 +12,14 @@
     }
    
 }
+#dropdown-menu-yearly-policy-menu{
+    top: 210px;
+    left: 320px;
+    .menu-item{
+        margin: 2px;
+        border: 2px solid #EDEDED;
+    }
+}
 
 #dropdown-menu-previous-months{
     top:55px;
