--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -1,6 +1,14 @@
 .Login-container {
     .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
         height: 5vh !important;
-        width: 248px !important;
+        width: 324px !important;
+        border-radius: 9px !important;
+    }
+    .textField-container{
+        width:100%;
+        height:9vh;
+        // border:2px solid blue
+        // display: flex;
+        // justify-content:;
     }
 }
