--- a/src/components/Policies/style.scss
+++ b/src/components/Policies/style.scss
@@ -38,8 +38,11 @@
         font-size: 14px;
     }
     .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
-        width:194px;
+        width:200px;
         background-color:white
+    }
+    .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
+        height: 0px !important;
     }
 }
 
