dashboard error removed

--- a/src/components/Dashboard/style.scss
+++ b/src/components/Dashboard/style.scss
@@ -13,10 +13,12 @@
 //     height:100px;
 // }
 
-.canvas{
-    width:4000px;
-    height:294px;
-}
+// .canvas{
+//     width:4000px;
+//     height:294px;
+// }
+
+
 
 // .CRM_dropdown{
     .MuiAutocomplete-hasPopupIcon.css-1wuilmg-MuiAutocomplete-root .MuiOutlinedInput-root{
