updated before deployment

--- a/src/components/Dashboard/style.scss
+++ b/src/components/Dashboard/style.scss
@@ -1,4 +1,6 @@
 .grid-inner-container{
+    display: 'flex';
+    align-items: center;
     background-color:white;
     height:80%;
     border-radius: 10px;
