--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -4,6 +4,11 @@
         width: 324px !important;
         border-radius: 9px !important;
     }
+    .css-1v4ccyo {
+        height: 5vh !important;
+        width: 324px !important;
+        border-radius: 9px !important;
+    }
     .textField-container{
         width:100%;
         height:9vh;
