--- a/src/components/Policies/style.scss
+++ b/src/components/Policies/style.scss
@@ -41,6 +41,10 @@
         width:200px;
         background-color:white
     }
+    .css-1v4ccyo{
+        width:200px;
+        background-color:white
+    }
     .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
         height: 0px !important;
     }
