--- a/src/shared-component/Calender/style.scss
+++ b/src/shared-component/Calender/style.scss
@@ -17,6 +17,20 @@
     }
 }
 
+//For deployment
+.css-eb89ea > .MuiTextField-root, .css-eb89ea > .MuiPickersTextField-root 
+{
+    width: 196px;
+    height: 30px;
+    background-color: white;
+    .css-1bn53lx{
+        height: 30px;
+        font-size: 14px;
+        min-width: 190px !important;
+    }
+}
+
+
 .addNewPolicyTextField{
     .css-1xgnz6y-MuiStack-root>.MuiTextField-root, .css-1xgnz6y-MuiStack-root>.MuiPickersTextField-root {
         width: 294px;
