--- a/src/components/Policies/style.scss
+++ b/src/components/Policies/style.scss
@@ -45,6 +45,9 @@
         width:200px;
         background-color:white
     }
+    .css-1x5jdmq{
+        height: 0px !important;
+    }
     .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
         height: 0px !important;
     }
