--- a/src/Layout/Header/Notification/style.scss
+++ b/src/Layout/Header/Notification/style.scss
@@ -7,6 +7,11 @@
         min-width: 339px;
         min-height: 300px;
     }
+    .css-1dmzujt{
+        border:2px solid #F08613;
+        min-width: 339px;
+        min-height: 300px;
+    }
 
     // .menu-item{
     //     margin: 4px;
