--- a/src/components/Recruits/style.scss
+++ b/src/components/Recruits/style.scss
@@ -23,6 +23,20 @@
       .profilePicCell {
          background-color: white !important;
       }
+
+      //For deployment
+      .css-1wbz3t9{
+         height: 0px !important;
+      }
+      .css-8coetn{
+         background-color: white !important;
+         border:0px !important;
+      }
+      .css-q34dxg{
+         background-color: #D9D9D9;
+         border-bottom: 28px solid white !important;
+      }
+
    }
 }
 
@@ -47,6 +61,17 @@
       }
    }
 }
+
+//For deployment search field
+.css-1ufn0jl{
+   height:5vh;
+}
+
+
+
+
+
+
 // .text-field{
    
 //    .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
