--- a/src/components/Recruits/style.scss
+++ b/src/components/Recruits/style.scss
@@ -9,7 +9,7 @@
 
       .css-y8ay40-MuiTableCell-root {
          background-color: white !important;
-         border:0px !important;
+         border: 0px !important;
       }
 
       .css-1ex1afd-MuiTableCell-root {
@@ -23,48 +23,56 @@
       .profilePicCell {
          background-color: white !important;
       }
+   }
 
-      //For deployment
-      .css-1wbz3t9{
+   //For deployment
+   .css-13xy2my {
+      border-radius: 0px !important;
+      width: 97% !important;
+
+      .css-1wbz3t9 {
          height: 0px !important;
       }
-      .css-8coetn{
+
+      .css-8coetn {
          background-color: white !important;
-         border:0px !important;
+         border: 0px !important;
       }
-      .css-q34dxg{
+
+      .css-q34dxg {
          background-color: #D9D9D9;
          border-bottom: 28px solid white !important;
       }
-
    }
+
 }
 
-.form-questions{
+.form-questions {
    font-size: 17px !important;
    font-weight: bold !important;
    color: rgb(0 0 0 / 67%);
 }
 
-.text-field-container{
-   justify-content:space-between ;
-   width:65%;
-   .text-field{
-   
-      .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
-         height:45px;
-         width:345px;
+.text-field-container {
+   justify-content: space-between;
+   width: 65%;
+
+   .text-field {
+
+      .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
+         height: 45px;
+         width: 345px;
       }
 
-      .MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.css-srn6bb-MuiAutocomplete-root .MuiOutlinedInput-root{
+      .MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.css-srn6bb-MuiAutocomplete-root .MuiOutlinedInput-root {
          height: 44px;
       }
    }
 }
 
 //For deployment search field
-.css-1ufn0jl{
-   height:5vh;
+.css-1ufn0jl {
+   height: 5vh;
 }
 
 
@@ -73,7 +81,7 @@
 
 
 // .text-field{
-   
+
 //    .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root{
 //       height:45px;
 //       width:345px;
