--- a/src/components/Agents/style.scss
+++ b/src/components/Agents/style.scss
@@ -30,6 +30,26 @@
    .css-apqrd9-MuiTableBody-root {
        border:2px solid red !important;
    }
+
+   //For deployment
+   .css-13xy2my {
+      border-radius: 0px !important;
+      width: 97% !important;
+
+      .css-1wbz3t9 {
+         height: 0px !important;
+      }
+
+      .css-8coetn {
+         background-color: white !important;
+         border: 0px !important;
+      }
+
+      .css-q34dxg {
+         background-color: #D9D9D9;
+         border-bottom: 28px solid white !important;
+      }
+   }
 }
 
 .policiesDataGrid {
