--- a/src/components/Agents/style.scss
+++ b/src/components/Agents/style.scss
@@ -35,6 +35,7 @@
    .css-13xy2my {
       border-radius: 0px !important;
       width: 97% !important;
+      height:64vh;
 
       .css-1wbz3t9 {
          height: 0px !important;
