--- a/src/components/Recruits/style.scss
+++ b/src/components/Recruits/style.scss
@@ -2,6 +2,7 @@
    .css-11xur9t-MuiPaper-root-MuiTableContainer-root {
       border-radius: 0px !important;
       width: 97% !important;
+      height:64vh;
 
       .css-15wwp11-MuiTableHead-root {
          height: 0px !important;
@@ -29,6 +30,7 @@
    .css-13xy2my {
       border-radius: 0px !important;
       width: 97% !important;
+      height:64vh;
 
       .css-1wbz3t9 {
          height: 0px !important;
