--- a/src/components/Recruits/style.scss
+++ b/src/components/Recruits/style.scss
@@ -69,6 +69,12 @@
       .MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.css-srn6bb-MuiAutocomplete-root .MuiOutlinedInput-root {
          height: 44px;
       }
+
+      //For deployment
+      .css-1v4ccyo{
+         height: 45px;
+         width: 345px;
+      }
    }
 }
 
