--- a/src/components/Recruits/style.scss
+++ b/src/components/Recruits/style.scss
@@ -70,10 +70,17 @@
          height: 44px;
       }
 
+      .css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root{
+         height: 6vh;
+      }
+
       //For deployment
       .css-1v4ccyo{
          height: 45px;
          width: 345px;
+      }
+      .css-segi59{
+         height: 6vh;
       }
    }
 }
