--- a/src/shared-component/CRM-Dropdown/style.scss
+++ b/src/shared-component/CRM-Dropdown/style.scss
@@ -4,47 +4,53 @@
     // width: 304px;
     // z-index: 5;
     top: 55px;
-    left: 335px;
+    left: 318px;
 
     .menu-item{
         margin: 2px;
         border: 2px solid #EDEDED;
+        width:340px
     }
    
 }
 #dropdown-menu-yearly-policy-menu{
     top: 200px;
-    left: 335px;
+    left: 318px;
     .menu-item{
         margin: 2px;
         border: 2px solid #EDEDED;
+        width:340px
+        // width:6000px
     }
 }
 
 #dropdown-menu-previous-months{
     top:55px;
-    left:1120px;
+    left:1105px;
     .menu-item{
         margin: 2px;
         border: 2px solid #EDEDED;
+        width:340px
     }
 }
 #dropdown-menu-previous-months2{
     top:528px;
-    left:1120px;
+    left:1105px;
     .menu-item{
         margin: 2px;
         border: 2px solid #EDEDED;
+        width:340px
     }
 }
 
 
 #dropdown-menu-previous-year{
-    top:210px;
-    left:1120px;
+    top:202px;
+    left:1125px;
     .menu-item{
         margin: 2px;
         border: 2px solid #EDEDED;
+        width:340px
     }
 }
 
