--- a/src/components/Statements/style.scss
+++ b/src/components/Statements/style.scss
@@ -13,3 +13,9 @@
     height:4vh;
     width:104px;
 }
+.css-e4w4as-MuiFormLabel-root-MuiInputLabel-root {
+    transform: translate(12px, 7px) scale(0.75) !important;
+}
+.css-14x1nlk {
+    transform: translate(12px, 7px) scale(0.75) !important;
+}
