--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -15,6 +15,9 @@
         .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
             height: 0px !important;
         }
+        .css-1x5jdmq{
+            height: 0px !important;
+        }
         // border:2px solid blue
         // display: flex;
         // justify-content:;
