--- a/src/components/Dashboard/style.scss
+++ b/src/components/Dashboard/style.scss
@@ -106,18 +106,21 @@
     border-radius: 17px;
 
     @media (max-width:1366px) and (min-width: 1200px) {
-        width: 81px;
+        width: 74px;
         height: 74px;
     }
 }
 
-.avatar-dashboard{
-    width: 103px;
-    height: 103px;
-    border-radius: 17px;
+.avatar-dashboard {
+    .css-17o22dy-MuiAvatar-root {
+        width: 103px;
+        height: 103px;
+        border-radius: 17px;
 
-    @media (max-width:1366px) and (min-width: 1200px) {
-        width: 81px;
-        height: 74px;
+        @media (max-width:1366px) and (min-width: 1200px) {
+
+            width: 74px !important;
+            height: 74px !important;
+        }
     }
 }
