--- a/src/components/Dashboard/style.scss
+++ b/src/components/Dashboard/style.scss
@@ -123,4 +123,15 @@
             height: 74px !important;
         }
     }
+    .css-1llrwy8 {
+        width: 103px;
+        height: 103px;
+        border-radius: 17px;
+
+        @media (max-width:1366px) and (min-width: 1200px) {
+
+            width: 74px !important;
+            height: 74px !important;
+        }
+    }
 }
