--- a/src/components/Carriers/style.scss
+++ b/src/components/Carriers/style.scss
@@ -1,12 +1,59 @@
+.carriers-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 200vh;
+    margin-left: 18%;
+    border: 2px solid black;
 
-.CarrierItemDropdown{
+    @media (max-width:1024px) {
+        width: 71%;
+        margin-left: 28%;
+    }
+
+    .carriers-inner-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 90%;
+        height: 90%;
+
+        @media (max-width:1024px) {
+            flex-direction: column;
+        }
+    }
+}
+
+.carrier-button {
+    display: flex;
+    background-color: #003478;
+        color: white;
+        height:39px;
+        width: 266px;
+        font-size: 12px;
+        padding: 3px;
+        border-top-left-radius:"0";
+        border-bottom-left-radius:"0";
+
+    &:hover {
+        background-color: '#003478'
+    }
+}
+
+
+
+.CarrierItemDropdown {
+
     // width: 226px !important;
     .css-lpyore-MuiButtonBase-root-MuiButton-root {
         width: 311px !important;
     }
-  
+
 }
-.carrier-link{
+
+.carrier-link {
     text-decoration: none;
-    color:white
+    color: white
 }
