--- a/src/components/Dashboard/style.scss
+++ b/src/components/Dashboard/style.scss
@@ -10,8 +10,15 @@
     .list-items {
         padding-top: 0px;
 
-        .list-items-text {
-            color: #003478
+        .list-item-container {
+            display: flex;
+            flex-direction: row;
+            @media (max-width:1024px){
+                flex-direction: column;
+            }
+            .list-items-text {
+                color: #003478
+            }
         }
     }
 
@@ -21,6 +28,10 @@
         @media (max-width:1366px) and (min-width: 1200px) {
             height: 24px;
         }
+        @media (max-width:1024px) {
+            height: 48px;
+        }
+
 
     }
 }
@@ -52,7 +63,27 @@
     display: none;
 }
 
-// }
+
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 0px;
+    margin-left: 277px;
+
+    @media (max-width:1366px) {
+        margin-left: 228px;
+    }
+
+    @media (max-width:1024px) {
+        margin-left: 289px;
+    }
+
+
+}
+
+
 .first-grid {
     background-color: #EDEDED;
     height: 19vh;
@@ -82,6 +113,34 @@
         height: 43vh;
         // border: 2px solid green;
     }
+
+    .dropdown-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .barChart-container{
+        height: 37vh;
+        width:91%;
+        flex-direction: row;
+        align-items: center;
+        margin: 0 auto;
+        border-radius: 15px;
+
+        @media (max-width:1024px) {
+            justify-content: center;
+        }
+
+        .yearly-data-container{
+            height: 30vh;
+            flex-direction: column;
+            align-content: space-between;
+            @media (max-width:1024px) {
+                height: 14vh;    
+            }
+        }
+    }
 }
 
 .third-grid {
@@ -98,6 +157,43 @@
         width: 98%;
         // border: 2px solid green
     }
+
+    .agent-container{
+        display: flex;
+        flex-direction: row;
+        // border: 2px solid red;
+        @media (max-width:1024px) {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    .agent-text{
+        font-size: 14px;
+        font-weight: bold;
+        // color:red
+        // width: 46%
+        @media (max-width:1024px) {
+            font-size: 15px;
+        }
+    }
+
+    .agent-text-value{
+        font-size: 12px;
+        @media (max-width:1024px) {
+            font-size: 13px;
+        }
+    }
+
+    // #agent-title{
+    //     font-size: 13px;
+    //     font-weight: bold;
+    //     // width: 43%;
+    //     @media (max-width:1024px) {
+    //         // width: 38%
+    //     }
+       
+    // }
 }
 
 .profilePic-dashboard {
@@ -123,6 +219,7 @@
             height: 74px !important;
         }
     }
+
     .css-1llrwy8 {
         width: 103px;
         height: 103px;
