--- a/src/components/Administration/style.scss
+++ b/src/components/Administration/style.scss
@@ -6,4 +6,26 @@
    @media (max-width:1024px) {
       margin-left:31%;
    }
+
+   .administration-inner-container{
+      align-items:center;
+      width: 60%;
+
+      @media (max-width:1024px) {
+         width:63%
+      }
+   }
+    
+   .image-inner-container{
+      justify-content: flex-end;
+      width:44%;
+      height: 81.7vh;
+      position: fixed;
+      right:0px;
+
+      @media (max-width:1024px) {
+         width:50%;
+         height: 90.7vh;
+     }
+   }
 }
