width of signup popup adjusted

--- a/src/components/AgentSignUp/style.scss
+++ b/src/components/AgentSignUp/style.scss
@@ -2,3 +2,8 @@
     width: 1000px !important;
     max-width: 1000px !important;
 }
+
+.css-uhb5lp {
+    width: 1000px !important;
+    max-width: 1000px !important;
+}
